test/mutation_analysis/s0455_assign_cookies/hafis/o3/mutants/9/result.txt
./test/mutation_analysis/s0455_assign_cookies/hafis/o3/mutants/9/Solution.java:26: error: unreachable statement
        while (false) {
                      ^
1 error
